api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: api.rizzserve.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: a08-proxy
                port:
                  number: 5000
