fe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: rizzserve.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aura-frontend
                port:
                  number: 3000
