ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /v1/
            pathType: Prefix
            backend:
              service:
                name: a08-proxy
                port:
                  number: 5000
          - path: /prometheus/
            pathType: Prefix
            backend:
              service:
                name: prometheus-stack-prometheus
                port:
                  number: 9100
